<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/cover"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_cover_height"
            android:padding="@dimen/imageview_padding"
            android:src="@drawable/generic_cover" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textview_padding"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/textview_margin"
                android:src="@drawable/account" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/textview_margin"
                tools:text="@string/default_artist"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/textview_padding"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/textview_margin"
                android:src="@drawable/adjust" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/textview_margin"
                tools:text="@string/default_trackname" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/textview_padding"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/textview_margin"
                android:src="@drawable/pause" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/textview_margin"
                android:src="@drawable/play" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/textview_margin"
                android:src="@drawable/stop" />
        </LinearLayout>

        <TextView
            android:id="@+id/welcome"
            style="@style/Legendary"
            android:layout_margin="@dimen/textview_margin"
            android:background="@color/welcome"
            android:text="@string/welcome"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/library"
            style="@style/Legendary"
            android:layout_margin="@dimen/textview_margin"
            android:background="@color/igbedu_library"
            android:text="@string/library"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>